# ctguard

./: .clang-format  .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Readme.md  codestyle.rst
.cmake/: FindCereal.cmake
.github/workflows/: default.yml
cmake/: cereal-config.cmake
config/: CMakeLists.txt  block_ip.sh  ctguard-diskscan.service  ctguard-intervention.service  ctguard-logscan.service  ctguard-research.service  logscan.conf  research.conf
debian/: changelog  control  copyright  ctguard-diskscan.service  ctguard-intervention.service  ctguard-logscan.service  ctguard-research.service  ctguard.dirs  ctguard.manpages  postinst  postrm  rules
debian/source/: lintian-overrides
debian/tests/: control  version
docs/: CMakeLists.txt  ctguard-diskscan.8.adoc  ctguard-intervention.8.adoc  ctguard-logscan.8.adoc  ctguard-research.8.adoc  diskscan.conf.5.adoc  footer.adoc.template  intervention.conf.5.adoc  logscan.conf.5.adoc  research.conf.5.adoc  rules.xml.5.adoc
itests/: CMakeLists.txt  all.sh  run_all.sh
itests/diskscan/: CMakeLists.txt
itests/diskscan/test1/: test.conf  test.expected  test.expected.sample  test.result  test.sh
itests/diskscan/test2/: test.conf  test.expected  test.expected.sample  test.result  test.sh
itests/diskscan/test3/: test.expected  test.expected.sample  test.result  test.sh
itests/intervention/: CMakeLists.txt
itests/intervention/test1/: intervention.conf  intervention.sh  intervention_action.expected  logscan.conf  research.conf  rules.xml  test.output.expected  test.sh
itests/logscan/: CMakeLists.txt
itests/logscan/test1/: test.conf  test.output.expected  test.sh
itests/logscan/test2/: test.conf  test.output.expected  test.sh
itests/logscan/test3/: test.output.expected  test.sh
itests/research/: CMakeLists.txt
itests/research/test1/: rules.xml  test.conf  test.output.expected  test.sh
itests/research/test2/: rules.xml  test.output.expected  test.sh
itests/research/test3/: research.conf  rules.xml  test.output.expected  test.sh
itests/research/test4/: rules.xml  test.intervention.expected  test.output.expected  test.sh
itests/research/test5/: rules.xml  test.conf  test.output.expected  test.sh
rules/: 00_format.xml  00_generic.xml  00_groups.xml  00_interventions.xml  09_grouping.xml  10_test.xml  50_dpkg.xml  50_unix-chkpwd.xml  CMakeLists.txt
src/: CMakeLists.txt
src/cfg/: ctguard-diskscan.service  ctguard-intervention.service  ctguard-logscan.service  ctguard-research.service  diskscan.conf  intervention.conf  research.conf  rules.xml
src/diskscan/: CMakeLists.txt  config.cpp  config.hpp  daemon.cpp  daemon.hpp  database.cpp  database.h  database.hpp  diskscan.cpp  eventsink.cpp  eventsink.hpp  filedata.cpp  filedata.hpp  watch.cpp  watch.hpp
src/intervention/: CMakeLists.txt  config.cpp  config.hpp  daemon.cpp  daemon.hpp  intervention.cpp
src/libs/: CMakeLists.txt  blockedqueue.hpp  check_file_perms.cpp  check_file_perms.hpp  ctguard_config.hpp.in  daemon_helper.cpp  daemon_helper.hpp  errnoexception.cpp  errnoexception.hpp  intervention.hpp  libexception.cpp  libexception.hpp  logger.hpp  parsehelper.hpp  safe_utilities.cpp  safe_utilities.hpp  scopeguard.hpp  source_event.hpp  unix_socket_client.cpp  unix_socket_client.hpp
src/libs/config/: CMakeLists.txt  configgroup.hpp  lexer.cpp  lexer.hpp  parseexception.cpp  parseexception.hpp  parser.cpp  parser.hpp  position.cpp  position.hpp  token.cpp  token.hpp
src/libs/filesystem/: CMakeLists.txt  directory.hpp
src/libs/sqlite/: CMakeLists.txt  sqlitedb.cpp  sqlitedb.hpp  sqliteexception.cpp  sqliteexception.hpp  sqlitestatement.cpp  sqlitestatement.hpp  sqlitetransaction.hpp
src/libs/xml/: CMakeLists.txt  XMLNode.cpp  XMLNode.hpp  XMLparser.cpp  XMLparser.hpp  xmlexception.cpp  xmlexception.hpp
src/logscan/: CMakeLists.txt  config.cpp  config.hpp  daemon.cpp  daemon.hpp  eventsink.cpp  eventsink.hpp  logfile.hpp  logscan.cpp
src/research/: CMakeLists.txt  config.cpp  config.hpp  daemon.cpp  daemon.hpp  event.cpp  event.hpp  intervention_sink.cpp  intervention_sink.hpp  process_log.cpp  process_log.hpp  research.cpp  research.hpp  rule.cpp  rule.hpp  send_mail.cpp  send_mail.hpp
src/test/: CMakeLists.txt  logger_test.cpp  sha256_test.cpp  test.xml  test_scopeguard.h  test_sha256.h  test_sqlite.h  test_xml.h  todo_test_config.h  xml_test.cpp
