add_library (libs_config STATIC
                               configgroup.hpp
                               lexer.cpp
                               lexer.hpp
                               parseexception.cpp
                               parseexception.hpp
                               parser.cpp
                               parser.hpp
                               position.cpp
                               position.hpp
                               token.cpp
                               token.hpp
                               )
