add_library (libs_xml STATIC
                             xmlexception.cpp
                             xmlexception.hpp
                             XMLNode.cpp
                             XMLNode.hpp
                             XMLparser.cpp
                             XMLparser.hpp
                             )
